[package]
name = "tokenized_portfolio"
version = "0.1.0"
authors = ["Brandon Torres"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "1.16.0"
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
spl-token = "3.5.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

# Add the latest tokio version for async runtime
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }


